--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -1,11 +1,42 @@
-<button mat-raised-button class="buttonadd">
-    <mat-icon>add</mat-icon>
-</button>
-<button mat-raised-button class="buttonadd">
-    <mat-icon>shopping_cart</mat-icon>
-</button>
-<table mat-table [dataSource]="offers" class="mat-elevation-z8">
+<div class="action-buttons">
+  <button mat-raised-button color="primary" class="buttonadd">
+    <mat-icon>add</mat-icon> Añadir oferta
+  </button>
+  <button mat-raised-button color="accent" class="buttonadd">
+    <mat-icon>shopping_cart</mat-icon> Ver carrito
+  </button>
+</div>
 
+<!-- Diseño de tarjetas -->
+<div class="offers-container" *ngIf="offers && offers.length > 0; else noOffers">
+  <div class="cards-grid">
+    <mat-card class="offer-card" *ngFor="let offer of offers">
+      <mat-card-header>
+        <mat-card-title>{{offer.title}}</mat-card-title>
+        <mat-card-subtitle>ID: {{offer.id}} | Empresa: {{offer.id_company}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{offer.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary">VER DETALLES</button>
+        <button mat-button color="accent">APLICAR</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+
+<!-- Mensaje cuando no hay ofertas -->
+<ng-template #noOffers>
+  <div class="no-offers">
+    <mat-icon>info</mat-icon>
+    <p>No hay ofertas disponibles en este momento</p>
+  </div>
+</ng-template>
+
+<!-- Tabla original (comentada) -->
+<!--
+<table mat-table [dataSource]="offers" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let offer"> {{offer.id}} </td>
@@ -16,15 +47,16 @@
         <td mat-cell *matCellDef="let offer">{{offer.title}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-        <td mat-cell *matCellDef="let offer"> {{offer.description}} </td>
+    <ng-container matColumnDef="offerDescription">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let offer"> {{offer.offerDescription}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="company_id">
+    <ng-container matColumnDef="companyId">
         <th mat-header-cell *matHeaderCellDef> Empresa </th>
-        <td mat-cell *matCellDef="let offer"> {{offer.id_company}} </td>
+        <td mat-cell *matCellDef="let offer"> {{offer.companyId}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+-->
