Display Offers Hotfix

--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -13,7 +13,7 @@
     <mat-card class="offer-card" *ngFor="let offer of offers">
       <mat-card-header>
         <mat-card-title>{{offer.title}}</mat-card-title>
-        <mat-card-subtitle>ID: {{offer.id}} | Empresa: {{offer.id_company}}</mat-card-subtitle>
+        <mat-card-subtitle>ID: {{offer.id}} | Empresa: {{offer.companyId}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <p>{{offer.description}}</p>
