--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -15,7 +15,8 @@
 .cards-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
+  gap: 8dvw;
+  margin: 2%
 }
 
 .offer-card {
@@ -27,11 +28,14 @@
 
 .offer-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 mat-card-content {
   flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .no-offers {
@@ -48,4 +52,36 @@ mat-card-content {
   width: 48px;
   height: 48px;
   margin-bottom: 16px;
+}
+
+button {
+  display: flex;
+  width: 30%;
+  padding: 2%;
+  margin-left: 2.5%;
+  margin-top: 2.5%;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 6px;
+  background-color: #e61b15;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  justify-content: center;
+}
+
+button:hover {
+  background-color: #333333;
+}
+
+.mdc-card__actions {
+  justify-content: space-around;
+  margin-top: 5%;
+}
+.mat-mdc-card-header {
+  display: flex;
+  padding: 16px 16px 0;
+  justify-content: center;
 }
