--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -2,9 +2,6 @@
   <button mat-raised-button color="primary" class="buttonadd">
     <mat-icon>add</mat-icon> Añadir oferta
   </button>
-  <button mat-raised-button color="accent" class="buttonadd">
-    <mat-icon>shopping_cart</mat-icon> Ver carrito
-  </button>
 </div>
 
 <!-- Diseño de tarjetas -->
@@ -13,10 +10,10 @@
     <mat-card class="offer-card" *ngFor="let offer of offers">
       <mat-card-header>
         <mat-card-title>{{offer.title}}</mat-card-title>
-        <mat-card-subtitle>ID: {{offer.id}} | Empresa: {{offer.companyId}}</mat-card-subtitle>
+        <!-- <mat-card-subtitle>ID: {{offer.id}} | Empresa: {{offer.companyId}}</mat-card-subtitle> -->
       </mat-card-header>
       <mat-card-content>
-        <p>{{offer.description}}</p>
+        <p>{{offer.offerDescription}}</p>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button color="primary">VER DETALLES</button>
