Funcionalidad boton publicar ofertas de display offer

--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -1,5 +1,5 @@
 <div class="action-buttons">
-  <button mat-raised-button color="primary" class="buttonadd">
+  <button mat-raised-button color="primary" class="buttonadd" (click)="publicar()">
     <mat-icon>add</mat-icon> Añadir oferta
   </button>
 </div>
