--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -16,7 +16,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 8dvw;
-  margin: 2%
+  margin: 2%;
 }
 
 .offer-card {
@@ -81,7 +81,15 @@ button:hover {
   margin-top: 5%;
 }
 .mat-mdc-card-header {
-  display: flex;
+  display: center;
   padding: 16px 16px 0;
   justify-content: center;
+}
+
+
+mat-card-title, mat-card-subtitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
