--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -1,6 +1,7 @@
-<div class="action-buttons">
-  <button mat-raised-button color="primary" class="buttonadd" (click)="publicar()">
-    <mat-icon>add</mat-icon> Añadir oferta
+<!-- Botón para añadir ofertas (reducido en ancho) -->
+<div class="action-buttons-top-right">
+  <button mat-mini-fab color="primary" class="buttonadd" (click)="publicar()">
+    <mat-icon>add</mat-icon>
   </button>
 </div>
 
@@ -30,30 +31,3 @@
     <p>No hay ofertas disponibles en este momento</p>
   </div>
 </ng-template>
-
-<!-- Tabla original (comentada) -->
-<!--
-<table mat-table [dataSource]="offers" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let offer"> {{offer.id}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let offer">{{offer.title}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="offerDescription">
-        <th mat-header-cell *matHeaderCellDef> Descripción </th>
-        <td mat-cell *matCellDef="let offer"> {{offer.offerDescription}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="companyId">
-        <th mat-header-cell *matHeaderCellDef> Empresa </th>
-        <td mat-cell *matCellDef="let offer"> {{offer.companyId}} </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
--->
