Website indexes changed

--- a/Front/src/app/main/display-offers/display-offers.component.css
+++ b/Front/src/app/main/display-offers/display-offers.component.css
@@ -1,51 +1,87 @@
+.top-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+
+.welcome-message {
+  font-family: sans-serif;
+  color: #333333;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+.companyName {
+  color: #e61b15;
+  font-weight: bold;
+}
+
+.welcome-message h3 {
+  margin: 0;
+  
+}
+
+h3 {
+  align-items: center;
+}
+
+.person_emoji {
+  color: #333333;
+  font-size: 2rem;
+  align-items: baseline;
+}
+
 .action-buttons {
   margin-bottom: 20px;
   display: flex;
   gap: 10px;
 }
-
+ 
 .action-buttons-top-right {
   display: flex;
   justify-content: flex-end;
   margin: 16px 16px 0 0;
 }
-
+ 
 .buttonadd {
-  width:max-content;
+  width: 2dvw;
+  height: 2dvw;
   padding: 0.6%;
   border-radius: 100%;
 }
-
+ 
 .offers-container {
   padding: 16px;
 }
-
+ 
 .cards-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 8dvw;
+  gap: 5dvw;
   margin: 2%;
 }
-
+ 
 .offer-card {
   height: 100%;
   display: flex;
   flex-direction: column;
   transition: transform 0.3s, box-shadow 0.3s;
 }
-
+ 
 .offer-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-
+ 
 mat-card-content {
   flex-grow: 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+ 
 .no-offers {
   display: flex;
   flex-direction: column;
@@ -54,14 +90,14 @@ mat-card-content {
   padding: 40px;
   color: #777;
 }
-
+ 
 .no-offers mat-icon {
   font-size: 48px;
   width: 48px;
   height: 48px;
   margin-bottom: 16px;
 }
-
+ 
 button {
   display: flex;
   width: 30%;
@@ -79,11 +115,11 @@ button {
   transition: background-color 0.3s ease;
   justify-content: center;
 }
-
+ 
 button:hover {
   background-color: #333333;
 }
-
+ 
 .mdc-card__actions {
   justify-content: space-around;
   margin-top: 5%;
@@ -93,7 +129,7 @@ button:hover {
   padding: 16px 16px 0;
   justify-content: center;
 }
-
+ 
 mat-card-title, mat-card-subtitle {
   display: flex;
   flex-direction: column;
