--- a/Front/src/styles.css
+++ b/Front/src/styles.css
@@ -1,5 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-
+/* *{
+    display: grid;
+    grid-template-columns: 1 1fr 1;
+} */
 html, body { 
     height: 100%; 
 }
@@ -8,3 +10,4 @@ body {
     margin: 0; 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
+
