--- a/Front/src/app/main/login/login.component.css
+++ b/Front/src/app/main/login/login.component.css
@@ -4,13 +4,20 @@ form {
   place-content: center;
 }
 
+mat-card-title {
+  color: #f5f5f5;
+}
+
 .form-data {
   margin: auto;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  min-height: max-content;
+  width: auto;
   align-items: center;
-  justify-content: center;
-  height: 100%;
+  max-height: 50dvh;
+  /* padding: 1rem; */
 }
 
 button {
@@ -19,10 +26,18 @@ button {
   justify-content: center;
   border: none;
 }
-
+.mat-mdc-card-header {
+  background-color: gray;
+  width: 88.1%;
+  height: 100%;
+  margin-bottom: 10%;
+  border-radius: 6px 6px 0 0;
+  justify-content: center;
+  padding-bottom:0.5rem ;
+}
 .mat-mdc-card-content {
   display: flex;
-  padding: 0 16px;
+  /* padding: 0 16px; */
   flex-direction: column;
 }
 
@@ -31,4 +46,30 @@ button {
   margin-bottom: 16px;
   text-align: center;
   font-size: 14px;
+}
+
+mat-form-field {
+  margin-bottom: 8%;
+}
+#buttonLogin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 100;
+  border-radius: 6px;
+  background-color: #e61b15;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 5%;
+}
+
+#buttonLogin:hover {
+  background-color: #333333;
+}
+
+#buttonHide {
+  background-color: #f5f5f5;
+  padding-top: 8%;
 }
