--- a/Front/src/app/main/login/login.component.css
+++ b/Front/src/app/main/login/login.component.css
@@ -6,6 +6,10 @@ form {
 
 mat-card-title {
   color: #f5f5f5;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form-data {
@@ -27,7 +31,7 @@ button {
   border: none;
 }
 .mat-mdc-card-header {
-  background-color: gray;
+  background-color: #333333;
   width: 88.1%;
   height: 100%;
   margin-bottom: 10%;
@@ -49,7 +53,7 @@ button {
 }
 
 mat-form-field {
-  margin-bottom: 8%;
+  margin-bottom: 7%;
 }
 #buttonLogin {
   display: flex;
@@ -72,4 +76,10 @@ mat-form-field {
 #buttonHide {
   background-color: #f5f5f5;
   padding-top: 8%;
+}
+
+img {
+   height: 40px;
+   margin-right: 0.5rem;
+
 }
