--- a/Front/src/app/main/login/login.component.html
+++ b/Front/src/app/main/login/login.component.html
@@ -1,7 +1,7 @@
 <form color="primary">
   <mat-card class="form-data">
     <mat-card-header>
-      <mat-card-title>INICIAR SESION</mat-card-title>
+      <mat-card-title> <img src="assets/img/icono-cluster.png" alt=""> INICIAR SESION</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
