Front para registrarse realizado

--- a/Front/src/app/header/header.component.html
+++ b/Front/src/app/header/header.component.html
@@ -21,6 +21,10 @@
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
       </button>
+      <button mat-menu-item [routerLink]="['/main/registrarse']">
+        <mat-icon>person_add</mat-icon>
+        <span>Registarse</span>
+      </button>
     </span>
   </mat-menu>
 </mat-toolbar>
