--- a/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.html
+++ b/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.html
@@ -55,7 +55,7 @@
 
       <!-- BOTÓN LOGIN -->
       <button type="submit" mat-raised-button color="primary" id="buttonLogin">
-        Login
+        Registrarse
         <mat-icon>login</mat-icon>
       </button>
 
