--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -1,5 +1,5 @@
 <!-- Fila superior con mensaje de bienvenida y botón -->
-<div class="top-row">
+<!-- <div class="top-row">
   <div class="welcome-message" *ngIf="isLoggedIn()">
     <h3>Bienvenido, <span class="companyName">{{companyName}}<mat-icon class="person_emoji">emoji_people</mat-icon></span></h3>
   </div>
@@ -8,7 +8,7 @@
       <mat-icon>add</mat-icon>
     </button>
   </div>
-</div>
+</div> -->
 
 <!-- Diseño de tarjetas -->
 <div class="offers-container" *ngIf="offers && offers.length > 0; else noOffers">
