--- a/Front/src/app/main/login/login.component.html
+++ b/Front/src/app/main/login/login.component.html
@@ -15,7 +15,8 @@
       <!-- PASSWORD -->
       <mat-form-field appearance="fill">
         <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" name="password" [(ngModel)]="password" (keyup.enter)="login(user, password)" />
+        <input matInput [type]="hide ? 'password' : 'text'" name="password" [(ngModel)]="password"
+          (keyup.enter)="login(user, password)" />
         <button type="button" id="buttonHide" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
           [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -26,13 +27,12 @@
       <div *ngIf="loginError" class="error-message">
         {{ loginError }}
       </div>
-
       <!-- BOTÓN LOGIN -->
       <button type="submit" mat-raised-button color="primary" id="buttonLogin">
         Login
         <mat-icon>login</mat-icon>
       </button>
-
+      <div id="buttonRegister" [routerLink]="['/main/registrarse']">¿No tienes una cuenta aún? Regístrate</div>
     </mat-card-content>
   </mat-card>
 </form>
