--- a/Front/src/app/main/login/login.component.css
+++ b/Front/src/app/main/login/login.component.css
@@ -6,7 +6,6 @@ form {
 
 mat-card-title {
   color: #f5f5f5;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,7 +17,7 @@ mat-card-title {
   flex-direction: column;
   justify-content: flex-start;
   min-height: max-content;
-  width: auto;
+  width: max-content;
   align-items: center;
   max-height: 50dvh;
   /* padding: 1rem; */
@@ -32,7 +31,7 @@ button {
 }
 .mat-mdc-card-header {
   background-color: #333333;
-  width: 88.1%;
+  width: 90.5%;
   height: 100%;
   margin-bottom: 10%;
   border-radius: 6px 6px 0 0;
@@ -82,4 +81,13 @@ img {
    height: 40px;
    margin-right: 0.5rem;
 
+}
+
+#buttonRegister {
+  margin: 0 1rem 1rem 1rem;
+}
+#buttonRegister:hover {
+  color: #e61b15;
+  text-decoration: underline;
+  cursor: pointer;
 }
