--- a/Front/src/app/main/display-offers/display-offers.component.html
+++ b/Front/src/app/main/display-offers/display-offers.component.html
@@ -23,7 +23,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button color="primary">VER DETALLES</button>
-        <button mat-button color="accent">APLICAR</button>
+        <button mat-button color="accent" (click)="applyOffer(offer.id)">APLICAR</button>
       </mat-card-actions>
     </mat-card>
   </div>
