Panel público de ofertas: los botones han sido modificados.

--- a/Front/src/app/main/company-panel/company-panel.component.html
+++ b/Front/src/app/main/company-panel/company-panel.component.html
@@ -22,7 +22,7 @@
         <p>{{offer.offerDescription}}</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button color="primary">VER DETALLES</button>
+        <!-- <button mat-button color="primary">VER DETALLES</button> -->
         <!-- <button mat-button color="accent" (click)="applyOffer(offer.id)">APLICAR</button> -->
       </mat-card-actions>
     </mat-card>
