--- a/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.html
+++ b/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.html
@@ -1,19 +1,23 @@
-<form [formGroup]="signUpForm" color="primary" (ngSubmit)="onSubmit()">
-  <mat-card class="form-data">
+<form [formGroup]="signUpForm" color="primary" (ngSubmit)="onSubmit()" class="login-container">
+  <div class="welcome-panel">
+    <h1>Bienvenido</h1>
+    <p>Regístrate para comenzar tu aventura. 🚀</p>
+  </div>
+  <mat-card class="form-panel">
     <mat-card-header>
-      <mat-card-title> <img src="assets/img/icono-cluster.png" alt=""> REGISTRARSE</mat-card-title>
+      <mat-card-title>REGISTRARSE</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
 
       <!-- USERNAME -->
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Nombre de usuario</mat-label>
         <input matInput type="text" name="login" formControlName="login" />
       </mat-form-field>
 
       <!-- PASSWORD -->
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Contraseña</mat-label>
         <input matInput [type]="hide ? 'password' : 'text'" name="password" formControlName="password"
           (keyup.enter)="onSubmit()" />
@@ -23,27 +27,27 @@
         </button>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Nombre</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Primer apellido</mat-label>
         <input matInput type="text" name="surname1" formControlName="surname1" />
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Segundo apellido</mat-label>
         <input matInput type="text" name="surname2" formControlName="surname2" />
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Teléfono</mat-label>
         <input matInput type="tel" name="phone" formControlName="phone" />
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" class="input-field">
         <mat-label>Correo</mat-label>
         <input matInput type="email" name="email" formControlName="email" />
       </mat-form-field>
@@ -56,7 +60,6 @@
       <!-- BOTÓN LOGIN -->
       <button type="submit" mat-raised-button color="primary" id="buttonLogin">
         Registrarse
-        <mat-icon>login</mat-icon>
       </button>
 
     </mat-card-content>
