--- a/Front/src/app/main/candidate-panel/candidate-panel.component.html
+++ b/Front/src/app/main/candidate-panel/candidate-panel.component.html
@@ -1,1 +1,6 @@
-<p>Hola, {{username}}</p>
+<!-- Fila superior con mensaje de bienvenida y botón -->
+ <div class="top-row">
+  <div class="welcome-message">
+    <h3>Bienvenido, <span class="companyName">{{username}}<mat-icon class="person_emoji">emoji_people</mat-icon></span></h3>
+  </div>
+</div>
