--- a/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.css
+++ b/Front/src/app/main/candidate-sign-up/candidate-sign-up.component.css
@@ -1,5 +1,6 @@
 .login-container {
   display: flex;
+  flex-direction: row-reverse;
   width: 1000px;
   max-width: 90vw;
   height: 500px;
@@ -18,8 +19,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   box-sizing: border-box;
   text-align: center;
 }
@@ -43,8 +44,8 @@
   padding: 2rem 2.5rem;
   display: flex;
   flex-direction: column;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
   box-sizing: border-box;
   color: #ccc;
   justify-content: center;
@@ -134,20 +135,34 @@ input::placeholder {
   cursor: pointer;
 }
 
-/* Responsive: stack panels vertically on small screens */
 @media (max-width: 600px) {
-  :host {
+  .login-container {
     flex-direction: column;
     height: auto;
     width: 90vw;
-    margin: 7% auto 7% auto; /* Reset margin to center on mobile */
+    margin: 7% auto 7% auto; 
   }
   .welcome-panel {
     border-radius: 15px 15px 0 0;
-    padding: 2rem 1.5rem;
+    padding: 0.1rem;
+  }
+  .welcome-panel h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .welcome-panel p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1% 5% 3% 5%;
   }
   .form-panel {
     border-radius: 0 0 15px 15px;
     padding: 2rem 1.5rem;
+    flex: 1;
+  }
+  mat-label {
+    font-size: x-small;
   }
 }
