--- a/Front/src/app/main/company-panel/company-panel.component.html
+++ b/Front/src/app/main/company-panel/company-panel.component.html
@@ -15,15 +15,17 @@
   <div class="cards-grid">
     <mat-card class="offer-card" *ngFor="let offer of offers">
       <mat-card-header>
-        <mat-card-title>{{offer.title}}</mat-card-title>
-        <mat-card-subtitle>Empresa: {{offer.companyName || 'Sin nombre'}}</mat-card-subtitle>
+        <div class="header-content">
+          <mat-card-title>{{ offer.title }}</mat-card-title>
+        </div>
       </mat-card-header>
+
       <mat-card-content>
-        <p>{{offer.offerDescription}}</p>
+        <p class="offer-description">{{ offer.offerDescription }}</p>
       </mat-card-content>
-      <mat-card-actions>
-        <!-- <button mat-button color="primary">VER DETALLES</button> -->
-        <!-- <button mat-button color="accent" (click)="applyOffer(offer.id)">APLICAR</button> -->
+
+      <mat-card-actions class="card-actions">
+        
       </mat-card-actions>
     </mat-card>
   </div>
