--- a/Front/src/app/header/header.component.css
+++ b/Front/src/app/header/header.component.css
@@ -1,19 +1,27 @@
-mat-toolbar img {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
-    max-height: 90%; 
+mat-toolbar {
+  padding-top: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  max-height: 100%;
 }
 
 .fill-remaining-space {
   flex-grow: 1;
 }
 
-/* Estilos para los iconos de login/logout */
 .mat-menu-item .mat-icon[fonticon="logout"] {
-  color: #e61b15; /* Color para el ícono de logout */
+  color: #e61b15;
 }
 
 .mat-menu-item .mat-icon[fonticon="login"] {
-  color: #3f51b5; /* Color para el ícono de login */
+  color: #3f51b5;
+}
+
+.logo-link img{
+  max-height: 60px;
+  padding-bottom: 1rem ;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
